[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/images/drole.png" type="Texture" id=1]
[ext_resource path="res://shared/back/back_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/avatarspace/avatarSpace1.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/centerStar.png" type="Texture" id=4]
[ext_resource path="res://assets/background.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=21]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 21 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.429
margin_top = -7.55945
margin_right = -16.429
margin_bottom = -7.55945
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" parent="." instance=ExtResource( 2 )]

[node name="ProfilPicture" type="TextureRect" parent="."]
anchor_left = 0.086
anchor_top = 0.203
anchor_right = 0.289
anchor_bottom = 0.577
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="Control" parent="."]
anchor_left = 0.07
anchor_top = 0.697
anchor_right = 0.314
anchor_bottom = 0.798
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsImage" type="TextureRect" parent="Stars"]
anchor_left = 0.245
anchor_top = 0.118
anchor_right = 0.245
anchor_bottom = 1.0
margin_right = 50.0
margin_bottom = -14.139
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsNumber" type="Label" parent="Stars"]
anchor_left = 0.46
anchor_top = 0.256
anchor_right = 0.572
anchor_bottom = 0.85
text = ":11
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerName" type="LineEdit" parent="."]
anchor_left = 0.064
anchor_top = 0.602
anchor_right = 0.312
anchor_bottom = 0.666
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.329
anchor_top = 0.065
anchor_right = 0.941
anchor_bottom = 0.204
margin_left = 2.59772
margin_top = -6.34961
margin_right = 2.59778
margin_bottom = -6.34961
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCategory" type="HBoxContainer" parent="ScrollContainer"]

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
anchor_left = 0.374
anchor_top = 0.242
anchor_right = 0.889
anchor_bottom = 0.779
margin_right = 12.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="GridContainer" parent="ScrollContainer2"]
